# spicview

./: .gitignore  .travis.yml  Makefile.am  autogen.sh  configure.ac  configure.in  spicview.desktop.in  travis_script
data/: Makefile.am  pref-dlg.ui
gresource/ui/: pref-dlg.ui
po/: POTFILES.in  ru.po  spicview.pot
src/: Makefile.am  file-dlgs.c  gpicview.c  gtkcompat.h  image-cache.c  image-cache.h  image-list.c  image-list.h  image-view.c  image-view.h  info-window.c  info-window.h  libfm.c  libsmfm_utils.c  libsmfm_utils.h  main-win.c  main-win.h  pref.c  pref.h  spicview.c  spicview.gresource.xml  spicview.h  working-area.c
