PIXMAPS_FILES = \
	pixmaps/object-rotate-right.png \
	pixmaps/object-rotate-left.png \
	pixmaps/object-flip-horizontal.png \
	pixmaps/object-flip-vertical.png

spicview_DATA = 
spicviewdir = $(datadir)/spicview

pixmaps_DATA = $(PIXMAPS_FILES)
pixmapsdir = $(spicviewdir)/pixmaps

ui_in_files = \
	pref-dlg.ui
ui_DATA = $(ui_in_files)
uidir=$(datadir)/spicview/ui

EXTRA_DIST = \
	$(spicview_DATA) \
	$(pixmaps_DATA) \
	$(ui_DATA)

